--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -280,6 +280,12 @@ img{
   margin-right: var(--mb-2);
   color: var(--first-color);
 }
+.node{
+  color: #388E3C;
+}
+.js{
+  color: #f0db4f;
+}
 
 .skills__names{
   display: flex;
@@ -297,8 +303,14 @@ img{
 .skills__unity{
   width: 95%;
 }
+.skills__unreal{
+  width: 30%;
+}
 .skills__node{
   width: 85%;
+}
+.skills__react{
+  width: 50%;
 }
 .skills__img{
   border-radius: .5rem;
